--- a/css/style.css
+++ b/css/style.css
@@ -33,5 +33,80 @@ body {
   url('../images/hero.jpg');
   background-size: cover;
   background-position: top;
-  clip-path: polygon(0 0, 100% 0, 100% 500px, 0 100%);
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
+}
+
+.logo-container {
+  position: absolute;
+  top: 35px;
+  left: 35px;
+}
+
+.logo {
+  height: 60px;
+}
+
+.header-text-container {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.mainHeading {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+}
+
+.main-heading-large {
+  display: block;
+  font-size: 60px;
+  font-weight: 400;
+  letter-spacing: 20px;
+  animation-name: moveInFromTop;
+  animation-duration: 4s;
+}
+
+.main-heading-sub {
+  display: block;
+  font-size: 40px;
+  font-weight: 40px;
+  letter-spacing: 15px;
+  animation-name: moveInFromLeft;
+  animation-duration: 4s;
+}
+
+@keyframes moveInFromLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+
+  40% {
+    transform: rotate(-180deg);
+  }
+
+  80% {
+    transform: translate(10px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
+
+@keyframes moveInFromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
 }
