--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,9 @@
-/* COLORS:
+/* COLOURS:
 
 Light green: #7ed56f
 Medium green: #55c57a
 Dark green: #28b485
 
-teal/turquoise? with white and blue?
 orange/yellow?
 
 */
@@ -37,24 +36,24 @@ body {
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 }
 
-.logo-container {
+.header__logo-container {
   position: absolute;
   top: 35px;
   left: 35px;
     backface-visibility: hidden;
 }
 
-.logo {
+.header__logo {
   height: 60px;
 }
 
-.logo:hover {
+.header__logo:hover {
   animation: moveInFromRight;
   animation-duration: 3s;
   cursor: pointer;
 }
 
-.header-text-container {
+.header__text-container {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -62,14 +61,14 @@ body {
   text-align: center;
 }
 
-.mainHeading {
+.main-heading {
   color: #fff;
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 50px;
 }
 
-.main-heading-large {
+.main-heading--large {
   display: block;
   font-size: 60px;
   font-weight: 400;
@@ -78,7 +77,7 @@ body {
   animation-duration: 2s;
 }
 
-.main-heading-sub {
+.main-heading--sub {
   display: block;
   font-size: 40px;
   font-weight: 40px;
@@ -164,9 +163,9 @@ body {
   box-shadow: 0 10px 10px rgba(0,0,0,.2);
 }
 
-.white-button:link, .white-button:visited {
+.button--white:link, .button--white:visited {
   background-color: #fff;
-  color: #777;
+  color: #008080;
 }
 
 .button::after {
@@ -182,7 +181,7 @@ body {
   transition: all 0.8s;
 }
 
-.white-button::after {
+.button--white::after {
   background-color: #fff;
 }
 
@@ -191,7 +190,7 @@ body {
   opacity: 0;
 }
 
-.button-animated {
+.button--animated {
   animation: moveInFromBottom 1s ease-out 5s;
   animation-fill-mode: backwards;
 }
