--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@ $colour-primary-dark: #00ffe2;
 $colour-primary-extra-dark: #008080;
 $colour-grey-dark: #777;
 $colour-white: #fff;
-
+$colour-black: #000;
 
 *,
 *::after,
@@ -38,31 +38,31 @@ body {
   background-position: top;
   position: relative;
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
-}
 
-.header__logo-container {
-  position: absolute;
-  top: 3.5rem;
-  left: 3.5rem;
-  backface-visibility: hidden;
-}
+  &__logo-container {
+    position: absolute;
+    top: 3.5rem;
+    left: 3.5rem;
+    backface-visibility: hidden;
+  }
 
-.header__logo {
-  height: 6rem;
-}
+  &__logo {
+    height: 6rem;
+  }
 
-.header__logo:hover {
-  animation: moveInFromRight;
-  animation-duration: 3s;
-  cursor: pointer;
-}
+  &__logo:hover {
+    animation: moveInFromRight;
+    animation-duration: 3s;
+    cursor: pointer;
+  }
 
-.header__text-container {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
+  &__text-container {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
 }
 
 .main-heading {
@@ -70,26 +70,26 @@ body {
   text-transform: uppercase;
   backface-visibility: hidden;
   margin-bottom: 5rem;
-}
 
-.main-heading--large {
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 2rem;
-  animation-name: moveInFromTop;
-  animation-duration: 2s;
-}
+  &--large {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 2rem;
+    animation-name: moveInFromTop;
+    animation-duration: 2s;
+  }
 
-.main-heading--sub {
-  display: block;
-  font-size: 4rem;
-  font-weight: 4rem;
-  letter-spacing: 1.5rem;
-  animation-name: moveInFromLeft;
-  animation-duration: 3s;
-  animation-delay: 2s;
-  animation-fill-mode: backwards;
+  &--sub {
+    display: block;
+    font-size: 4rem;
+    font-weight: 4rem;
+    letter-spacing: 1.5rem;
+    animation-name: moveInFromLeft;
+    animation-duration: 3s;
+    animation-delay: 2s;
+    animation-fill-mode: backwards;
+  }
 }
 
 @keyframes moveInFromLeft {
@@ -147,56 +147,58 @@ body {
   }
 }
 
-.button:link, .button:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 1.5rem 4rem;
-  border-radius: .5rem;
-  display: inline-block;
-  transition: all .2s;
-  position: relative;
-  font-size: 1.6rem;
-}
+.button {
+  &:link,
+  &:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    border-radius: .5rem;
+    display: inline-block;
+    transition: all .2s;
+    position: relative;
+    font-size: 1.6rem;
+  }
 
-.button:hover {
-  transform: translateY(-1rem);
-  box-shadow: 0 10px 20px rgba(0,0,0,.5);
-  font-size: 2rem;
-}
+  &:hover {
+    transform: translateY(-1rem);
+    box-shadow: 0 10px 20px rgba($colour-black,.5);
+    font-size: 2rem;
+    &::after {
+      transform: scaleX(1.4) scaleY(1.6);
+      opacity: 0;
+    }
+  }
 
-.button:active {
-  transform: translateY(-0.5rem);
-  box-shadow: 0 10px 10px rgba(0,0,0,.2);
-}
+  &:active {
+    transform: translateY(-0.5rem);
+    box-shadow: 0 10px 10px rgba($colour-black,.2);
+  }
 
-.button--white:link, .button--white:visited {
-  background-color: $colour-white;
-  color: $colour-primary-extra-dark;
-}
+  &--white {
+    background-color: $colour-white;
+    color: $colour-primary-extra-dark;
+    &::after {
+      background-color: $colour-white;
+    }
 
-.button::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: .5rem;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all 0.8s;
-}
+  }
+  &::after {
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: .5rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.8s;
+  }
 
-.button--white::after {
-  background-color: $colour-white;
-}
+  .button--animated {
+    animation: moveInFromBottom 1s ease-out 5s;
+    animation-fill-mode: backwards;
+  }
 
-.button:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
-}
-
-.button--animated {
-  animation: moveInFromBottom 1s ease-out 5s;
-  animation-fill-mode: backwards;
 }
