--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,14 @@
+@import "abstracts/mixins";
+@import "abstracts/variables";
+@import "abstracts/functions";
+
+@import "base/animations";
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
+
+@import "pages/home"
+
 $colour-primary: #52fde8;
 $colour-primary-light: #a4fbed;
 $colour-primary-dark: #00ffe2;
