--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,13 @@
+@import "abstracts/functions";
 @import "abstracts/mixins";
 @import "abstracts/variables";
-@import "abstracts/functions";
 
 @import "base/animations";
 @import "base/base";
 @import "base/typography";
 @import "base/utilities";
 
-@import "pages/home"
+@import "pages/home";
 
 $colour-primary: #52fde8;
 $colour-primary-light: #a4fbed;
