--- a/css/style.css
+++ b/css/style.css
@@ -1,68 +1,3 @@
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-html {
-  font-size: 62.5%; }
-
-body {
-  font-family: 'Lato', sans-serif;
-  font-weight: 400;
-  line-height: 1.7;
-  color: #777;
-  padding: 3rem;
-  box-sizing: border-box; }
-
-.header {
-  height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(164, 251, 237, 0.7), rgba(0, 255, 226, 0.7)), url("../images/hero.jpg");
-  background-size: cover;
-  background-position: top;
-  position: relative;
-  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
-  .header__logo-container {
-    position: absolute;
-    top: 3.5rem;
-    left: 3.5rem;
-    backface-visibility: hidden; }
-  .header__logo {
-    height: 6rem; }
-  .header__logo:hover {
-    animation: moveInFromRight;
-    animation-duration: 3s;
-    cursor: pointer; }
-  .header__text-container {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center; }
-
-.main-heading {
-  color: #fff;
-  text-transform: uppercase;
-  backface-visibility: hidden;
-  margin-bottom: 5rem; }
-  .main-heading--large {
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 2rem;
-    animation-name: moveInFromTop;
-    animation-duration: 2s; }
-  .main-heading--sub {
-    display: block;
-    font-size: 4rem;
-    font-weight: 4rem;
-    letter-spacing: 1.5rem;
-    animation-name: moveInFromLeft;
-    animation-duration: 3s;
-    animation-delay: 2s;
-    animation-fill-mode: backwards; }
-
 @keyframes moveInFromLeft {
   0% {
     opacity: 0;
@@ -98,6 +33,48 @@ body {
   100% {
     opacity: 1;
     transform: translate(0); } }
+
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: inherit; }
+
+html {
+  font-size: 62.5%; }
+
+body {
+  box-sizing: border-box; }
+
+body {
+  font-family: 'Lato', sans-serif;
+  font-weight: 400;
+  line-height: 1.7;
+  color: #777;
+  padding: 3rem; }
+
+.main-heading {
+  color: #fff;
+  text-transform: uppercase;
+  backface-visibility: hidden;
+  margin-bottom: 5rem; }
+  .main-heading--large {
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 2rem;
+    animation-name: moveInFromTop;
+    animation-duration: 2s; }
+  .main-heading--sub {
+    display: block;
+    font-size: 4rem;
+    font-weight: 4rem;
+    letter-spacing: 1.5rem;
+    animation-name: moveInFromLeft;
+    animation-duration: 3s;
+    animation-delay: 2s;
+    animation-fill-mode: backwards; }
 
 .button:link, .button:visited {
   text-transform: uppercase;
@@ -142,3 +119,28 @@ body {
 .button .button--animated {
   animation: moveInFromBottom 1s ease-out 5s;
   animation-fill-mode: backwards; }
+
+.header {
+  height: 95vh;
+  background-image: linear-gradient(to right bottom, rgba(164, 251, 237, 0.7), rgba(0, 255, 226, 0.7)), url("../images/hero.jpg");
+  background-size: cover;
+  background-position: top;
+  position: relative;
+  clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
+  .header__logo-container {
+    position: absolute;
+    top: 3.5rem;
+    left: 3.5rem;
+    backface-visibility: hidden; }
+  .header__logo {
+    height: 6rem; }
+  .header__logo:hover {
+    animation: moveInFromRight;
+    animation-duration: 3s;
+    cursor: pointer; }
+  .header__text-container {
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center; }
