getting started with grid

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,5 @@
+// Colours
+
 $colour-primary: #52fde8;
 $colour-primary-light: #a4fbed;
 $colour-primary-dark: #00ffe2;
@@ -5,3 +7,9 @@ $colour-primary-extra-dark: #008080;
 $colour-grey-dark: #777;
 $colour-white: #fff;
 $colour-black: #000;
+
+// Grid variables
+
+$grid-width: 114rem;
+$vertical-margin: 8rem;
+$horizontal-margin: 6rem;
