--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,13 @@ body {
   animation: moveInFromBottom 1s ease-out 5s;
   animation-fill-mode: backwards; }
 
+.row {
+  max-width: 114rem;
+  background-color: #eee;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+
 .header {
   height: 95vh;
   background-image: linear-gradient(to right bottom, rgba(164, 251, 237, 0.7), rgba(0, 255, 226, 0.7)), url("../images/hero.jpg");
