--- a/css/style.css
+++ b/css/style.css
@@ -126,6 +126,15 @@ body {
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
+  .row::after {
+    content: "";
+    display: table;
+    clear: both; }
+  .row .col-1-of-2 {
+    width: calc((100% - 8rem) / 2);
+    background-color: orangered; }
+    .row .col-1-of-2:not(:last-child) {
+      margin-right: 6rem; }
 
 .header {
   height: 95vh;
