--- a/css/style.css
+++ b/css/style.css
@@ -132,9 +132,12 @@ body {
     clear: both; }
   .row .col-1-of-2 {
     width: calc((100% - 8rem) / 2);
-    background-color: orangered; }
+    background-color: orangered;
+    float: left; }
     .row .col-1-of-2:not(:last-child) {
       margin-right: 6rem; }
+  .row .col-1-of-3 {
+    width: calc((100% - 2 * 6rem) / 3); }
 
 .header {
   height: 95vh;
