--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -12,9 +12,15 @@
   .col-1-of-2 {
     width: calc((100% - #{$vertical-margin}) / 2);
     background-color: orangered;
+    float: left;
 
     &:not(:last-child) {
       margin-right: $horizontal-margin;
     }
+  }
+
+  .col-1-of-3 {
+    width: calc((100% - 2 * #{$horizontal-margin}) / 3);
+
   }
 }
