--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -9,18 +9,37 @@
 
   @include clearfix;
 
-  .col-1-of-2 {
-    width: calc((100% - #{$vertical-margin}) / 2);
+  [class^="col-"] {
     background-color: orangered;
     float: left;
 
     &:not(:last-child) {
       margin-right: $horizontal-margin;
     }
+
+  }
+
+  .col-1-of-2 {
+    width: calc((100% - #{$horizontal-margin}) / 2);
   }
 
   .col-1-of-3 {
     width: calc((100% - 2 * #{$horizontal-margin}) / 3);
+  }
 
+  .col-2-of-3 {
+    width: calc(2 * ((100% - 2 * #{$horizontal-margin}) / 3) + #{$horizontal-margin}) ;
+  }
+
+  .col-1-of-4 {
+    width: calc((100% - 3 * #{$horizontal-margin}) / 4);
+  }
+
+  .col-2-of-4 {
+    width: calc(2 * ((100% - 3 * #{$horizontal-margin}) / 4) + #{$horizontal-margin});
+  }
+
+  .col-3-of-4 {
+    width: calc(3 * ((100% - 3 * #{$horizontal-margin}) / 4) + (2 * #{$horizontal-margin}));
   }
 }
