--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,31 @@ body {
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards; }
+    .main-heading--sub:hover {
+      transform: skewY(2deg); }
+
+.secondary-heading {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: -webkit-linear-gradient(left, #a4fbed, #00ffe2);
+  background-image: -o-linear-gradient(left, #a4fbed, #00ffe2);
+  background-image: linear-gradient(to left top, #a4fbed, #00ffe2);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s; }
+  .secondary-heading:hover {
+    transform: skewY(-9deg) skewX(5deg) scale(1.1);
+    text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
+
+.u-centre-text {
+  text-align: center; }
+
+.u-margin-bottom-8 {
+  margin-bottom: 8rem; }
 
 .button:link, .button:visited {
   text-transform: uppercase;
@@ -122,7 +147,6 @@ body {
 
 .row {
   max-width: 114rem;
-  background-color: #eee;
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
@@ -131,7 +155,6 @@ body {
     display: table;
     clear: both; }
   .row [class^="col-"] {
-    background-color: orangered;
     float: left; }
     .row [class^="col-"]:not(:last-child) {
       margin-right: 6rem; }
@@ -172,3 +195,8 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     text-align: center; }
+
+.about-section {
+  background-color: #f7f7f7;
+  padding: 20rem 0;
+  margin-top: -20vh; }
