--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -4,6 +4,8 @@ $colour-primary: #52fde8;
 $colour-primary-light: #a4fbed;
 $colour-primary-dark: #00ffe2;
 $colour-primary-extra-dark: #008080;
+
+$color-grey-light: #f7f7f7;
 $colour-grey-dark: #777;
 $colour-white: #fff;
 $colour-black: #000;
