--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,5 +30,29 @@ body {
     animation-duration: 3s;
     animation-delay: 2s;
     animation-fill-mode: backwards;
+
+    &:hover {
+      transform: skewY(2deg);
+    }
+  }
+}
+
+.secondary-heading {
+  font-size: 3.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  display: inline-block;
+  background-image: -webkit-linear-gradient(left, $colour-primary-light, $colour-primary-dark);
+  background-image: -o-linear-gradient(left, $colour-primary-light, $colour-primary-dark);
+  background-image: linear-gradient(to left top, $colour-primary-light, $colour-primary-dark);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  letter-spacing: .2rem;
+  transition: all .2s;
+
+  &:hover {
+    transform: skewY(-9deg) skewX(5deg) scale(1.1);
+    text-shadow: .5rem 1rem 2rem rgba($colour-black, .2);
   }
 }
