--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,3 +15,7 @@ $colour-black: #000;
 $grid-width: 114rem;
 $vertical-margin: 8rem;
 $horizontal-margin: 6rem;
+
+// fonts
+
+$default-font-size: 1.6rem;
