--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -53,3 +53,28 @@
   }
 
 }
+
+.text-button {
+  &:link,
+  &:visited {
+    font-size: $default-font-size;
+    color: $colour-primary;
+    display: inline-block;
+    text-decoration: none;
+    border-bottom: 1px solid $colour-primary;
+    padding: 8px;
+    transition: all .2s;
+  }
+
+  &:hover {
+    background-color: $colour-primary;
+    color: $colour-white;
+    box-shadow: 0 1rem 2rem rgba($colour-black, .15);
+    transform: translateY(-2px);
+  }
+
+  &:active {
+    box-shadow: 0 .5rem 1rem rgba($colour-black, .15);
+    transform: translateY(-2px);
+  }
+}
