--- a/css/style.css
+++ b/css/style.css
@@ -183,6 +183,33 @@ body {
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
   transform: translateY(-2px); }
 
+.composition {
+  position: relative; }
+  .composition__photo {
+    width: 55%;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
+    border-radius: 5px;
+    position: absolute;
+    z-index: 5;
+    transition: all .2s;
+    outline-offset: 0.6rem; }
+    .composition__photo--p1 {
+      left: -5%;
+      top: -2rem; }
+    .composition__photo--p2 {
+      right: 5%;
+      top: 2rem; }
+    .composition__photo--p3 {
+      left: 15%;
+      top: 15rem; }
+    .composition__photo:hover {
+      outline: 1rem solid #52fde8;
+      transform: scale(1.2) translateY(-0.5rem);
+      box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.6);
+      z-index: 15; }
+  .composition:hover .composition__photo:not(:hover) {
+    transform: scale(0.8); }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
