--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,27 @@ body {
   .composition:hover .composition__photo:not(:hover) {
     transform: scale(0.8); }
 
+.theme-box {
+  background-color: rgba(255, 255, 255, 0.8);
+  font-size: 1.5rem;
+  padding: 1rem 1.8rem;
+  text-align: center;
+  border-radius: 5px;
+  box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
+  transition: transition .3s; }
+  .theme-box__icon {
+    font-size: 5rem;
+    margin: .1rem;
+    display: inline-block;
+    background-image: -webkit-linear-gradient(left, #a4fbed, #00ffe2);
+    background-image: -o-linear-gradient(left, #a4fbed, #00ffe2);
+    background-image: linear-gradient(to left top, #a4fbed, #00ffe2);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent; }
+  .theme-box:hover {
+    transform: translateY(-1.5rem) scale(1.03); }
+
 .row {
   max-width: 114rem;
   margin: 0 auto; }
@@ -263,5 +284,10 @@ body {
 
 .about-section {
   background-color: #f7f7f7;
-  padding: 20rem 0;
+  padding: 20rem 0 10rem 0;
   margin-top: -20vh; }
+
+.theme-section {
+  padding: 10rem 0;
+  background-image: linear-gradient(to right bottom, rgba(164, 251, 237, 0.7), rgba(0, 255, 226, 0.7)), url("../images/larger-geometric-art.jpg");
+  background-size: cover; }
