--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "components/button";
 @import "components/composition";
+@import "components/theme-box";
 
 @import "layout/grid";
 @import "layout/header";
