themes section complete - just need to add own icons

--- a/css/style.css
+++ b/css/style.css
@@ -213,7 +213,8 @@ body {
 .theme-box {
   background-color: rgba(255, 255, 255, 0.8);
   font-size: 1.5rem;
-  padding: 1rem 1.8rem;
+  padding: 1.8rem;
+  margin: 1rem;
   text-align: center;
   border-radius: 5px;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
@@ -232,7 +233,7 @@ body {
     transform: translateY(-1.5rem) scale(1.03); }
 
 .row {
-  max-width: 114rem;
+  max-width: 130rem;
   margin: 0 auto; }
   .row:not(:last-child) {
     margin-bottom: 8rem; }
@@ -243,19 +244,21 @@ body {
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
-      margin-right: 6rem; }
+      margin-right: 1rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 6rem) / 2); }
+    width: calc((100% - 1rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - 2 * 6rem) / 3); }
+    width: calc((100% - 2 * 1rem) / 3); }
   .row .col-2-of-3 {
-    width: calc(2 * ((100% - 2 * 6rem) / 3) + 6rem); }
+    width: calc(2 * ((100% - 2 * 1rem) / 3) + 1rem); }
   .row .col-1-of-4 {
-    width: calc((100% - 3 * 6rem) / 4); }
+    width: calc((100% - 3 * 1rem) / 4); }
   .row .col-2-of-4 {
-    width: calc(2 * ((100% - 3 * 6rem) / 4) + 6rem); }
+    width: calc(2 * ((100% - 3 * 1rem) / 4) + 1rem); }
   .row .col-3-of-4 {
-    width: calc(3 * ((100% - 3 * 6rem) / 4) + (2 * 6rem)); }
+    width: calc(3 * ((100% - 3 * 1rem) / 4) + (2 * 1rem)); }
+  .row .col-1-of-6 {
+    width: calc((100% - 5 * 1rem) / 6); }
 
 .header {
   height: 95vh;
@@ -284,10 +287,14 @@ body {
 
 .about-section {
   background-color: #f7f7f7;
-  padding: 20rem 0 10rem 0;
+  padding: 20rem;
   margin-top: -20vh; }
 
 .theme-section {
   padding: 10rem 0;
-  background-image: linear-gradient(to right bottom, rgba(164, 251, 237, 0.7), rgba(0, 255, 226, 0.7)), url("../images/larger-geometric-art.jpg");
-  background-size: cover; }
+  background-image: linear-gradient(to right bottom, rgba(164, 251, 237, 0.7), rgba(0, 255, 226, 0.7)), url("../images/geometric-art-large.jpg");
+  background-size: cover;
+  margin-top: -9rem;
+  transform: skewY(-5deg); }
+  .theme-section > * {
+    transform: skewY(5deg); }
