--- a/sass/components/_theme-box.scss
+++ b/sass/components/_theme-box.scss
@@ -1,7 +1,8 @@
 .theme-box {
   background-color: rgba($colour-white, .8);
   font-size: 1.5rem;
-  padding: 1rem 1.8rem;
+  padding: 1.8rem;
+  margin: 1rem;
   text-align: center;
   border-radius: 5px;
   box-shadow: 0 1.5rem 4rem rgba($colour-black, .15);
