--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,6 +1,6 @@
 .about-section {
   background-color: $color-grey-light;
-  padding: 20rem 0 10rem 0;
+  padding: 20rem;
   margin-top: -20vh;
 }
 
@@ -10,7 +10,13 @@
     to right bottom,
     rgba($colour-primary-light, 0.7),
     rgba($colour-primary-dark, 0.7)),
-  url('../images/larger-geometric-art.jpg');
+  url('../images/geometric-art-large.jpg');
   background-size: cover;
+  margin-top: -9rem;
 
+  transform: skewY(-5deg);
+
+  & > * {
+    transform: skewY(5deg);
+  }
 }
