--- a/css/style.css
+++ b/css/style.css
@@ -244,21 +244,21 @@ body {
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
-      margin-right: 1rem; }
+      margin-right: 1.2rem; }
   .row .col-1-of-2 {
-    width: calc((100% - 1rem) / 2); }
+    width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - 2 * 1rem) / 3); }
+    width: calc((100% - 2 * 1.2rem) / 3); }
   .row .col-2-of-3 {
-    width: calc(2 * ((100% - 2 * 1rem) / 3) + 1rem); }
+    width: calc(2 * ((100% - 2 * 1.2rem) / 3) + 1.2rem); }
   .row .col-1-of-4 {
-    width: calc((100% - 3 * 1rem) / 4); }
+    width: calc((100% - 3 * 1.2rem) / 4); }
   .row .col-2-of-4 {
-    width: calc(2 * ((100% - 3 * 1rem) / 4) + 1rem); }
+    width: calc(2 * ((100% - 3 * 1.2rem) / 4) + 1.2rem); }
   .row .col-3-of-4 {
-    width: calc(3 * ((100% - 3 * 1rem) / 4) + (2 * 1rem)); }
+    width: calc(3 * ((100% - 3 * 1.2rem) / 4) + (2 * 1.2rem)); }
   .row .col-1-of-6 {
-    width: calc((100% - 5 * 1rem) / 6); }
+    width: calc((100% - 5 * 1.2rem) / 6); }
 
 .header {
   height: 95vh;
@@ -287,7 +287,7 @@ body {
 
 .about-section {
   background-color: #f7f7f7;
-  padding: 20rem;
+  padding: 20rem 10rem;
   margin-top: -20vh; }
 
 .theme-section {
