--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,7 +14,8 @@ $colour-black: #000;
 
 $grid-width: 130rem;
 $vertical-margin: 8rem;
-$horizontal-margin: 1rem;
+$horizontal-margin-large: 6rem;
+$horizontal-margin: 1.2rem;
 
 // fonts
 
