--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -18,7 +18,7 @@
   }
 
   .col-1-of-2 {
-    width: calc((100% - #{$horizontal-margin}) / 2);
+    width: calc((100% - #{$horizontal-margin-large}) / 2);
   }
 
   .col-1-of-3 {
