--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 @keyframes moveInFromRight {
   0% {
     opacity: 0;
-    transform: rotate(-420deg); }
+    transform: rotate(-360deg); }
   100% {
     opacity: 1; } }
 
@@ -92,7 +92,7 @@ body {
   letter-spacing: .2rem;
   transition: all .2s; }
   .secondary-heading:hover {
-    transform: skewY(-9deg) skewX(5deg) scale(1.1);
+    transform: skewY(-6deg) skewX(5deg) scale(1.1);
     text-shadow: 0.5rem 1rem 2rem rgba(0, 0, 0, 0.2); }
 
 .tertiary-heading {
@@ -124,7 +124,7 @@ body {
   text-transform: uppercase;
   text-decoration: none;
   padding: 1.5rem 4rem;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   display: inline-block;
   transition: all .2s;
   position: relative;
@@ -188,7 +188,7 @@ body {
   .composition__photo {
     width: 55%;
     box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
-    border-radius: 5px;
+    border-radius: 0.5rem;
     position: absolute;
     z-index: 5;
     transition: all .2s;
@@ -216,7 +216,7 @@ body {
   padding: 1.8rem;
   margin: 1rem;
   text-align: center;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   transition: transition .3s; }
   .theme-box__icon {
@@ -232,6 +232,34 @@ body {
   .theme-box:hover {
     transform: translateY(-1.5rem) scale(1.03); }
 
+.card {
+  perspective: 150rem;
+  -moz-perspective: 150rem;
+  position: relative;
+  height: 50rem; }
+  .card__side {
+    color: #fff;
+    height: 50rem;
+    font-size: 2rem;
+    transition: all .8s ease;
+    position: absolute;
+    height: 50rem;
+    top: 0;
+    left: 0;
+    width: 100%;
+    backface-visibility: hidden;
+    border-radius: 1rem;
+    box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15); }
+    .card__side--front {
+      background-color: #fff; }
+    .card__side--back {
+      background-image: linear-gradient(to right bottom, #ffb900, #ff7730);
+      transform: rotateY(180deg); }
+  .card:hover .card__side--front {
+    transform: rotateY(-180deg); }
+  .card:hover .card__side--back {
+    transform: rotateY(0); }
+
 .row {
   max-width: 130rem;
   margin: 0 auto; }
@@ -244,11 +272,16 @@ body {
   .row [class^="col-"] {
     float: left; }
     .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-6 {
+    width: calc((100% - 5 * 1.2rem) / 6);
+    float: left; }
+    .row .col-1-of-6:not(:last-child) {
       margin-right: 1.2rem; }
   .row .col-1-of-2 {
     width: calc((100% - 6rem) / 2); }
   .row .col-1-of-3 {
-    width: calc((100% - 2 * 1.2rem) / 3); }
+    width: calc((100% - 2 * 6rem) / 3); }
   .row .col-2-of-3 {
     width: calc(2 * ((100% - 2 * 1.2rem) / 3) + 1.2rem); }
   .row .col-1-of-4 {
@@ -257,8 +290,6 @@ body {
     width: calc(2 * ((100% - 3 * 1.2rem) / 4) + 1.2rem); }
   .row .col-3-of-4 {
     width: calc(3 * ((100% - 3 * 1.2rem) / 4) + (2 * 1.2rem)); }
-  .row .col-1-of-6 {
-    width: calc((100% - 5 * 1.2rem) / 6); }
 
 .header {
   height: 95vh;
@@ -298,3 +329,8 @@ body {
   transform: skewY(-5deg); }
   .theme-section > * {
     transform: skewY(5deg); }
+
+.faves-section {
+  background-color: #f7f7f7;
+  padding: 20rem 0 20rem 0;
+  margin-top: -9rem; }
