--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -5,6 +5,12 @@ $colour-primary-light: #a4fbed;
 $colour-primary-dark: #00ffe2;
 $colour-primary-extra-dark: #008080;
 
+$colour-secondary-light: #ffb900;
+$colour-secondary-dark: #ff7730;
+
+$colour-tertiary-light: #2998ff;
+$colour-tertiary-dark: #5643fa;
+
 $color-grey-light: #f7f7f7;
 $colour-grey-dark: #777;
 $colour-white: #fff;
@@ -20,3 +26,10 @@ $horizontal-margin: 1.2rem;
 // fonts
 
 $default-font-size: 1.6rem;
+
+
+// border radius
+
+$radius-large: 1rem;
+$radius-medium: .5rem;
+$radius-small: .4rem;
