--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -4,7 +4,7 @@
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
-    border-radius: .5rem;
+    border-radius: $radius-medium;
     display: inline-block;
     transition: all .2s;
     position: relative;
