--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -4,7 +4,7 @@
     &__photo {
       width: 55%;
       box-shadow: 0 1.5rem 4rem rgba($colour-black, .4);
-      border-radius: 5px;
+      border-radius: $radius-medium;
       position: absolute;
       z-index: 5;
       transition: all .2s;
