--- a/sass/components/_theme-box.scss
+++ b/sass/components/_theme-box.scss
@@ -4,7 +4,7 @@
   padding: 1.8rem;
   margin: 1rem;
   text-align: center;
-  border-radius: 5px;
+  border-radius: $radius-medium;
   box-shadow: 0 1.5rem 4rem rgba($colour-black, .15);
   transition: transition .3s;
 
