--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -12,6 +12,16 @@
     float: left;
 
     &:not(:last-child) {
+      margin-right: $horizontal-margin-large;
+    }
+
+  }
+
+  .col-1-of-6 {
+    width: calc((100% - 5 * #{$horizontal-margin}) / 6);
+    float: left;
+
+    &:not(:last-child) {
       margin-right: $horizontal-margin;
     }
 
@@ -22,7 +32,7 @@
   }
 
   .col-1-of-3 {
-    width: calc((100% - 2 * #{$horizontal-margin}) / 3);
+    width: calc((100% - 2 * #{$horizontal-margin-large}) / 3);
   }
 
   .col-2-of-3 {
@@ -39,9 +49,5 @@
 
   .col-3-of-4 {
     width: calc(3 * ((100% - 3 * #{$horizontal-margin}) / 4) + (2 * #{$horizontal-margin}));
-  }
-
-  .col-1-of-6 {
-      width: calc((100% - 5 * #{$horizontal-margin}) / 6);
   }
 }
