--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/button";
 @import "components/composition";
 @import "components/theme-box";
+@import "components/card";
 
 @import "layout/grid";
 @import "layout/header";
