--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -20,3 +20,9 @@
     transform: skewY(5deg);
   }
 }
+
+.faves-section {
+  background-color: $color-grey-light;
+  padding: 20rem 0 20rem 0;
+  margin-top: -9rem;
+}
