--- a/css/style.css
+++ b/css/style.css
@@ -236,14 +236,11 @@ body {
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem; }
+  height: 52rem; }
   .card__side {
-    color: #fff;
-    height: 50rem;
-    font-size: 2rem;
+    height: 52rem;
     transition: all .8s ease;
     position: absolute;
-    height: 50rem;
     top: 0;
     left: 0;
     width: 100%;
@@ -259,6 +256,50 @@ body {
     transform: rotateY(-180deg); }
   .card:hover .card__side--back {
     transform: rotateY(0); }
+  .card__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%); }
+    .card__picture-1 {
+      background-image: linear-gradient(to right bottom, #bc4e9c, #00ffe2), url("../images/jazz.jpg"); }
+    .card__picture-2 {
+      background-image: linear-gradient(to right bottom, #a4fbed, #f80759), url("../images/kathak.png"); }
+    .card__picture-3 {
+      background-image: linear-gradient(to right bottom, #bc4e9c, #ff7730), url("../images/baking.jpg"); }
+  .card__heading {
+    font-size: 2.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: #fff;
+    position: absolute;
+    top: 17rem;
+    right: 2rem;
+    width: 94%; }
+  .card__heading-span {
+    padding: 0.5rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone; }
+    .card__heading-span-1 {
+      background-image: linear-gradient(to right bottom, rgba(188, 78, 156, 0.85), rgba(0, 255, 226, 0.85)); }
+    .card__heading-span-2 {
+      background-image: linear-gradient(to right bottom, rgba(164, 251, 237, 0.85), rgba(248, 7, 89, 0.85)); }
+    .card__heading-span-3 {
+      background-image: linear-gradient(to right bottom, rgba(188, 78, 156, 0.85), rgba(255, 119, 48, 0.85)); }
+  .card__details {
+    padding: 3rem; }
+    .card__details ul {
+      list-style: none;
+      width: 80%;
+      margin: 0 auto; }
+      .card__details ul li {
+        text-align: center;
+        font-size: 1.6rem;
+        padding: 1rem; }
+        .card__details ul li:not(:last-child) {
+          border-bottom: 1px solid #eee; }
 
 .row {
   max-width: 130rem;
@@ -297,6 +338,7 @@ body {
   background-size: cover;
   background-position: top;
   position: relative;
+  -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
   clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%); }
   .header__logo-container {
     position: absolute;
