--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -8,10 +8,11 @@ $colour-primary-extra-dark: #008080;
 $colour-secondary-light: #ffb900;
 $colour-secondary-dark: #ff7730;
 
-$colour-tertiary-light: #2998ff;
-$colour-tertiary-dark: #5643fa;
+$colour-tertiary-light: #bc4e9c;
+$colour-tertiary-dark: #f80759;
 
-$color-grey-light: #f7f7f7;
+$colour-grey-light: #f7f7f7;
+$colour-grey-light-2: #eee;
 $colour-grey-dark: #777;
 $colour-white: #fff;
 $colour-black: #000;
