--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -2,17 +2,14 @@
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
-  height: 50rem;
+  height: 52rem;
 
   &__side {
-    color: #fff;
-    height: 50rem;
-    font-size: 2rem;
+    height: 52rem;
 
     transition: all .8s ease;
     position: absolute;
 
-    height: 50rem;
     top: 0;
     left: 0;
     width: 100%;
@@ -38,5 +35,86 @@
 
   &:hover &__side--back {
     transform: rotateY(0);
+  }
+
+
+  // Front side styling
+
+  &__picture {
+    background-size: cover;
+    height: 23rem;
+    background-blend-mode: screen;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+
+    &-1 {
+      background-image: linear-gradient(to right bottom, $colour-tertiary-light, $colour-primary-dark),
+      url("../images/jazz.jpg");
+    }
+
+    &-2 {
+      background-image: linear-gradient(to right bottom, $colour-primary-light, $colour-tertiary-dark),
+      url("../images/kathak.png");
+    }
+
+    &-3 {
+      background-image: linear-gradient(to right bottom, $colour-tertiary-light, $colour-secondary-dark),
+      url("../images/baking.jpg");
+    }
+  }
+
+  &__heading {
+    font-size: 2.5rem;
+    font-weight: 300;
+    text-transform: uppercase;
+    text-align: right;
+    color: $colour-white;
+    position: absolute;
+    top: 17rem;
+    right: 2rem;
+    width: 94%;
+  }
+
+  &__heading-span {
+    padding: 0.5rem 1.5rem;
+    -webkit-box-decoration-break: clone;
+    box-decoration-break: clone;
+
+    &-1 {
+      background-image: linear-gradient(to right bottom,
+      rgba($colour-tertiary-light, .85),
+      rgba($colour-primary-dark, .85));
+    }
+
+    &-2 {
+      background-image: linear-gradient(to right bottom,
+      rgba($colour-primary-light, .85),
+      rgba($colour-tertiary-dark, .85));
+    }
+
+    &-3 {
+      background-image: linear-gradient(to right bottom,
+      rgba($colour-tertiary-light, .85),
+      rgba($colour-secondary-dark, .85));
+    }
+  }
+
+  &__details {
+      padding: 3rem;
+      ul {
+        list-style: none;
+        width: 80%;
+        margin: 0 auto;
+
+        li {
+          text-align: center;
+          font-size: $default-font-size;
+          padding: 1rem;
+
+          &:not(:last-child) {
+            border-bottom: 1px solid $colour-grey-light-2;
+          }
+        }
+      }
   }
 }
