--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .about-section {
-  background-color: $color-grey-light;
+  background-color: $colour-grey-light;
   padding: 20rem 10rem;
   margin-top: -20vh;
 }
@@ -22,7 +22,7 @@
 }
 
 .faves-section {
-  background-color: $color-grey-light;
+  background-color: $colour-grey-light;
   padding: 20rem 0 20rem 0;
   margin-top: -9rem;
 }
