--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -34,6 +34,16 @@
     }
 
   }
+
+  &--green {
+    background-color: $colour-primary;
+    color: $colour-white;
+    &::after {
+      background-color: $colour-primary;
+    }
+
+  }
+
   &::after {
     content: "";
     display: inline-block;
