--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -23,6 +23,11 @@
 
 .faves-section {
   background-color: $colour-grey-light;
-  padding: 20rem 0 20rem 0;
+  padding: 15rem 0 10rem 0;
   margin-top: -9rem;
+}
+
+.stories-section {
+  padding: 10rem 0;
+  background-color: $colour-grey-light;
 }
