--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -3,7 +3,7 @@
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($colour-black, .1);
   background-color: $colour-white;
-  border-radius: $radius-small;
+  border-radius: $radius-medium;
   padding: 6rem;
   padding-left: 9rem;
   font-size: $default-font-size;
