--- a/sass/components/_story.scss
+++ b/sass/components/_story.scss
@@ -2,7 +2,7 @@
   width: 75%;
   margin: 0 auto;
   box-shadow: 0 3rem 6rem rgba($colour-black, .1);
-  background-color: $colour-white;
+  background-color: rgba($colour-white, .7);
   border-radius: $radius-medium;
   padding: 6rem;
   padding-left: 9rem;
