--- a/sass/main.scss
+++ b/sass/main.scss
@@ -11,6 +11,7 @@
 @import "components/composition";
 @import "components/theme-box";
 @import "components/card";
+@import "components/background-video";
 @import "components/story";
 
 @import "layout/grid";
