--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/card";
 @import "components/background-video";
 @import "components/story";
+@import "components/form";
 
 @import "layout/grid";
 @import "layout/header";
