--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,6 +14,7 @@ $colour-tertiary-dark: #f80759;
 $colour-grey-light: #f7f7f7;
 $colour-grey-light-2: #eee;
 $colour-grey-dark: #777;
+$colour-grey-dark-2: #999;
 $colour-white: #fff;
 $colour-black: #000;
 
