booking form formatted

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -43,14 +43,14 @@
                            rgba($colour-white, .7) 50%,
                            transparent 50%,
                            ),
-                    url("../images/georgian-cuisine.jpg");
+                    url("../images/batumi-feast.jpg");
   background-size: 100%;
   border-radius: $radius-medium;
   box-shadow: 0 1.5rem 4rem rgba($colour-black, 0.15);
   height: 50rem;
 
     &__form {
-      width: 50%;
+      width: 55%;
       padding: 3rem 6rem;
     }
 }
