--- a/css/style.css
+++ b/css/style.css
@@ -396,6 +396,20 @@ body {
   .form__input::-wekit-input-placeholder {
     color: #999; }
 
+.form__label {
+  font-family: inherit;
+  font-size: 1.6rem;
+  font-weight: 500;
+  margin-left: 2rem;
+  margin-top: .7rem;
+  display: block;
+  transition: all .3s; }
+
+.form__input:placeholder-shown + .form __label {
+  opacity: 0;
+  visibility: hidden;
+  transform: translateY(-4rem); }
+
 .row {
   max-width: 130rem;
   margin: 0 auto; }
@@ -481,11 +495,11 @@ body {
   background-image: linear-gradient(to right bottom, #a4fbed, #00ffe2); }
 
 .booking {
-  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 50%, transparent 50%), url("../images/georgian-cuisine.jpg");
+  background-image: linear-gradient(105deg, rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0.7) 50%, transparent 50%), url("../images/batumi-feast.jpg");
   background-size: 100%;
   border-radius: 0.5rem;
   box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.15);
   height: 50rem; }
   .booking__form {
-    width: 50%;
+    width: 55%;
     padding: 3rem 6rem; }
