--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -33,7 +33,19 @@
     }
 
     &__label {
+        font-family: inherit;
+        font-size: $default-font-size;
+        font-weight: 500;
+        margin-left: 2rem;
+        margin-top: .7rem;
+        display: block;
+        transition: all .3s;
+    }
 
+    &__input:placeholder-shown + & __label {
+      opacity: 0;
+      visibility: hidden;
+      transform: translateY(-4rem);
     }
 
 }
