--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,7 +1,7 @@
 .form {
 
     &__details:not(:last-child) {
-      margin-bottom: 2rem;
+      margin-bottom: 5rem;
     }
 
     &__input {
@@ -10,7 +10,7 @@
       color: inherit;
       padding: 2rem;
       border-radius: $radius-small;
-      background-color: rgba($colour-white, .5);
+      background-color: rgba($colour-white, .8);
       border: none;
       width: 90%;
       display: block;
@@ -37,7 +37,7 @@
         font-size: $default-font-size;
         font-weight: 500;
         margin-left: 2rem;
-        margin-top: .7rem;
+        margin-top: 1rem;
         display: block;
         transition: all .3s;
     }
