--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -39,15 +39,15 @@
 
 .booking {
   background-image: linear-gradient(105deg,
-                           rgba($colour-white, .7) 0%,
-                           rgba($colour-white, .7) 50%,
-                           transparent 50%,
+                           rgba($colour-white, .9) 0%,
+                           rgba($colour-white, .9) 50%,
+                           transparent 52%,
                            ),
-                    url("../images/batumi-feast.jpg");
+                    url("../images/chinesecalligraphy.jpg");
   background-size: 100%;
   border-radius: $radius-medium;
   box-shadow: 0 1.5rem 4rem rgba($colour-black, 0.15);
-  height: 50rem;
+  height: 60rem;
 
     &__form {
       width: 55%;
