--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -1,7 +1,7 @@
 .form {
 
     &__details:not(:last-child) {
-      margin-bottom: 5rem;
+      margin-bottom: 2rem;
     }
 
     &__input {
@@ -37,12 +37,12 @@
         font-size: $default-font-size;
         font-weight: 500;
         margin-left: 2rem;
-        margin-top: 1rem;
+        margin-top: .3rem;
         display: block;
         transition: all .3s;
     }
 
-    &__input:placeholder-shown + & __label {
+    &__input:placeholder-shown + &__label {
       opacity: 0;
       visibility: hidden;
       transform: translateY(-4rem);
