--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,6 +15,7 @@ $colour-grey-light: #f7f7f7;
 $colour-grey-light-2: #eee;
 $colour-grey-dark: #777;
 $colour-grey-dark-2: #999;
+$colour-grey-dark-3: #373536;
 $colour-white: #fff;
 $colour-black: #000;
 
