--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -38,23 +38,46 @@ body {
 }
 
 .secondary-heading {
-  font-size: 3.5rem;
-  text-transform: uppercase;
-  font-weight: 700;
-  display: inline-block;
-  background-image: -webkit-linear-gradient(left, $colour-primary-light, $colour-primary-dark);
-  background-image: -o-linear-gradient(left, $colour-primary-light, $colour-primary-dark);
-  background-image: linear-gradient(to left top, $colour-primary-light, $colour-primary-dark);
-  background-clip: text;
-  -webkit-background-clip: text;
-  color: transparent;
-  letter-spacing: .2rem;
-  transition: all .2s;
+      &--green {
+     font-size: 3.5rem;
+     text-transform: uppercase;
+     font-weight: 700;
+     display: inline-block;
+     background-clip: text;
+     -webkit-background-clip: text;
+     color: transparent;
+     letter-spacing: .2rem;
+     transition: all .2s;
+     background-image: -webkit-linear-gradient(left, $colour-primary-light, $colour-primary-dark);
+     background-image: -o-linear-gradient(left, $colour-primary-light, $colour-primary-dark);
+     background-image: linear-gradient(to left top, $colour-primary-light, $colour-primary-dark);
 
-  &:hover {
-    transform: skewY(-6deg) skewX(5deg) scale(1.1);
-    text-shadow: .5rem 1rem 2rem rgba($colour-black, .2);
-  }
+         &:hover {
+           transform: skewY(-6deg) skewX(5deg) scale(1.1);
+           text-shadow: .5rem 1rem 2rem rgba($colour-black, .2);
+         }
+       }
+
+     &--orange {
+         font-size: 3.5rem;
+         text-transform: uppercase;
+         font-weight: 700;
+         display: inline-block;
+         background-clip: text;
+         -webkit-background-clip: text;
+         color: transparent;
+         letter-spacing: .2rem;
+         transition: all .2s;
+         background-image: -webkit-linear-gradient(left, $colour-secondary-light, $colour-secondary-dark);
+         background-image: -o-linear-gradient(left, $colour-secondary-light, $colour-secondary-dark);
+         background-image: linear-gradient(to left top, $colour-secondary-light, $colour-secondary-dark);
+
+           &:hover {
+             transform: skewY(-6deg) skewX(5deg) scale(1.1);
+             text-shadow: .5rem 1rem 2rem rgba($colour-black, .2);
+           }
+       }
+
 }
 
 .tertiary-heading {
