--- a/sass/base/_utilities.scss
+++ b/sass/base/_utilities.scss
@@ -1,23 +1,21 @@
-.u-centre-text {
-  text-align: center;
-}
+.u-centre-text { text-align: center !important; }
 
 .u-margin-bottom-large {
-  margin-bottom: 8rem;
+  margin-bottom: 8rem !important;
 }
 
 .u-margin-bottom-medium {
-  margin-bottom: 4rem;
+  margin-bottom: 4rem !important;
 }
 
 .u-margin-bottom-small {
-  margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem !important;
 }
 
 .u-margin-top-large {
-  margin-top: 8rem;
+  margin-top: 8rem !important;
 }
 
 .u-margin-top-very-large {
-  margin-top: 10rem;
+  margin-top: 10rem !important;
 }
