--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .button {
+  &,
   &:link,
   &:visited {
     text-transform: uppercase;
@@ -9,6 +10,10 @@
     transition: all .2s;
     position: relative;
     font-size: 1.6rem;
+    // revised version of a button tag
+
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -21,7 +26,8 @@
     }
   }
 
-  &:active {
+  &:active, &:focus {
+    outline: none;
     transform: translateY(-0.5rem);
     box-shadow: 0 10px 10px rgba($colour-black,.2);
   }
@@ -43,6 +49,16 @@
     }
 
   }
+
+  &--orange {
+    background-color: $colour-secondary-dark;
+    color: $colour-white;
+    &::after {
+      background-color: $colour-secondary-dark;
+    }
+
+  }
+
 
   &::after {
     content: "";
