--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -48,4 +48,51 @@
       transform: translateY(-4rem);
     }
 
+    &__radio-buttons {
+      width: 49%;
+      display: inline-block;
+      margin-top: 1rem;
+    }
+
+    &__radio-input {
+      display: none;
+    }
+
+    &__radio-label {
+      font-size: $default-font-size;
+      cursor: pointer;
+      position: relative;
+      padding-left: 3.5rem;
+    }
+
+    &__radio-button {
+        height: 3rem;
+        width: 3rem;
+        border: 5px solid $colour-secondary-dark;
+        border-radius: 50%;
+        display: inline-block;
+        position: absolute;
+        top: -.3rem;
+        left: 0rem;
+
+      &::after {
+          content: "";
+          display: block;
+          height: 1.3rem;
+          width: 1.3rem;
+          border-radius: 50%;
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          background-color: $colour-secondary-dark;
+          opacity: 0;
+          transition: opacity .2s;
+      }
+    }
+
+    &__radio-input:checked ~ &__radio-label &__radio-button::after {
+        opacity: 1;
+    }
+
 }
