--- a/css/style.css
+++ b/css/style.css
@@ -535,13 +535,24 @@ body {
 
 .footer {
   background-color: #373536;
-  padding: 5rem 0;
+  padding: 5rem;
   font-size: 1.6rem; }
   .footer__logo-box {
     text-align: center; }
   .footer__logo {
     width: 15rem;
     height: auto; }
+    .footer__logo:hover {
+      animation: moveInFromRight;
+      animation-duration: 3s;
+      cursor: pointer; }
+  .footer__logo-name:hover {
+    color: #bc4e9c;
+    transform: skewY(2deg); }
+  .footer__navigation {
+    border-top: 1px solid #777;
+    padding-top: 2rem;
+    display: inline-block; }
   .footer__list {
     list-style: none; }
   .footer__item {
@@ -550,12 +561,21 @@ body {
       margin-right: 1.5rem; }
   .footer__link:link, .footer__link:visited {
     color: #f7f7f7;
+    background-color: #373536;
     text-decoration: none;
     text-transform: uppercase;
-    display: inline-block; }
+    display: inline-block;
+    transition: all .2s; }
   .footer__link:hover, .footer__link:active {
-    color: #52fde8;
-    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4); }
+    color: #bc4e9c;
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.4);
+    transform: rotate(3deg) scale(1.3); }
+  .footer__personal {
+    color: #f7f7f7;
+    border-top: 1px solid #777;
+    padding-top: 2rem;
+    width: 80%;
+    float: right; }
 
 .about-section {
   background-color: #f7f7f7;
