--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -11,6 +11,8 @@
           right: 7rem;
           border-radius: 50%;
           z-index: 100;
+          box-shadow: 0 1rem 3rem rgba($colour-black, .1);
+          cursor: pointer;
         }
 
         &__background {
@@ -22,8 +24,8 @@
             right: 6.5rem;
             background-image: radial-gradient($colour-primary-light, $colour-primary-dark);
             z-index: 50;
+            transition: transform .8s cubic-bezier(0.075, 0.82, 0.165, 1);
 
-            transform: scale(100);
         }
 
        &__container {
@@ -33,6 +35,11 @@
           top: 0;
           right: 0;
           z-index: 75;
+
+
+          opacity: 0;
+          width: 0;
+          transition: all .8s;
        }
 
         &__list {
@@ -42,6 +49,7 @@
           transform: translate(-50%,-50%);
           list-style: none;
           text-align: center;
+          width: 100%;
         }
 
         &__item {
@@ -73,6 +81,14 @@
            color: $colour-primary;
            transform: translateX(1rem);
          }
+        }
 
+        &__checkbox:checked ~ &__background {
+          transform: scale(100);
+        }
+
+        &__checkbox:checked ~ &__container {
+          width: 100%;
+          opacity: 1;
         }
 }
