--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -29,10 +29,7 @@
   }
 
   &__text-container {
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absoluteCentre;
     text-align: center;
   }
 }
