--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -7,11 +7,13 @@
           background-color: $colour-white;
           height: 7rem;
           width: 7rem;
-          top: 7rem;
-          right: 7rem;
+          position: fixed;
+          top: 6rem;
+          right: 6rem;
           border-radius: 50%;
           z-index: 100;
           box-shadow: 0 1rem 3rem rgba($colour-black, .1);
+          text-align: center;
           cursor: pointer;
         }
 
@@ -33,13 +35,13 @@
           width: 100%;
           position: fixed;
           top: 0;
-          right: 0;
+          left: 0;
           z-index: 75;
 
 
           opacity: 0;
           width: 0;
-          transition: all .8s;
+          transition: all .8s cubic-bezier(0.86, 0, 0.07, 1);
        }
 
         &__list {
@@ -53,7 +55,7 @@
         }
 
         &__item {
-
+          margin: 1rem;
         }
 
         &__link {
@@ -91,4 +93,54 @@
           width: 100%;
           opacity: 1;
         }
+
+        &__icon {
+          position: relative;
+          margin-top: 3.5rem;
+
+          &,
+          &::before,
+          &::after {
+            width: 3rem;
+            height: 2px;
+            background-color: $colour-grey-dark-3;
+            display: inline-block;
+          }
+
+          &::before,
+          &::after {
+            content: "";
+            position: absolute;
+            left: 0;
+            transition: all .2s;
+          }
+
+          &::before {
+            top: -1rem;
+           }
+
+          &::after { top: 1rem; }
+        }
+
+    &__button:hover &__icon::before {
+        top: -1.2rem;
+    }
+
+    &__button:hover &__icon::after {
+        top: 1.2rem;
+    }
+
+    &__checkbox:checked + &__button &__icon {
+        background-color: transparent;
+    }
+
+    &__checkbox:checked + &__button &__icon::before {
+        top: 0;
+        transform: rotate(135deg);
+    }
+
+    &__checkbox:checked + &__button &__icon::after {
+        top: 0;
+        transform: rotate(-135deg);
+    }
 }
