getting started with media queries

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -12,3 +12,36 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+// Media query management
+
+/*
+
+0 - 600px mobile
+600px - 900px tablet (portrait)
+900px - 1200px tablet (landscape)
+1800px+ large desktop
+
+*/
+
+@mixin responsive-mobile {
+  @media (max-width: 600px) {
+    @content
+  };
+}
+
+/*
+ $breakpoint argument choices
+- mobile
+- portrait
+- landscape
+- large-screen
+*/
+
+@mixin responsive($breakpoint) {
+  @if $breakpoint == mobile {
+
+  }
+
+  
+}
