--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,18 @@
+/*
+
+0 - 600px mobile
+600px - 900px tablet (portrait)
+900px - 1200px tablet (landscape)
+1800px+ large desktop
+
+*/
+/*
+ $breakpoint argument choices
+- mobile
+- portrait
+- landscape
+- large-screen
+*/
 @keyframes moveInFromLeft {
   0% {
     opacity: 0;
@@ -43,6 +58,9 @@
 
 html {
   font-size: 62.5%; }
+  @media (max-width: 600px) {
+    html {
+      font-size: 50%; } }
 
 body {
   box-sizing: border-box; }
@@ -487,18 +505,6 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: all .3s; }
-  .popup__close:link, .popup__close:visited {
-    color: #777;
-    position: absolute;
-    top: 2.5rem;
-    right: 2.5rem;
-    font-size: 3rem;
-    text-decoration: none;
-    display: inline-block;
-    transition: all .2s;
-    line-height: 1; }
-  .popup__close :hover {
-    color: #52fde8; }
   .popup__content {
     position: absolute;
     top: 50%;
@@ -509,7 +515,10 @@ body {
     box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
     border-radius: 1rem;
     display: table;
-    overflow: hidden; }
+    overflow: hidden;
+    opacity: 0;
+    transform: translate(-50%, -50%) scale(0.25);
+    transition: all .4s .2s; }
   .popup__left {
     width: 43%;
     display: table-cell; }
@@ -522,6 +531,9 @@ body {
     display: block;
     width: 100%; }
   .popup:target {
+    opacity: 1;
+    visibility: visible; }
+  .popup:target .popup__content {
     opacity: 1;
     visibility: visible; }
   .popup__text {
@@ -539,6 +551,18 @@ body {
     hyphens: auto; }
     .popup__text p {
       margin-bottom: 1rem; }
+  .popup__close:link, .popup__close:visited {
+    color: #777;
+    position: absolute;
+    top: 2.5rem;
+    right: 2.5rem;
+    font-size: 3rem;
+    text-decoration: none;
+    display: inline-block;
+    transition: all .2s;
+    line-height: 1; }
+  .popup__close :hover {
+    color: #52fde8; }
 
 .row {
   max-width: 130rem;
