--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -40,8 +40,23 @@
 
 @mixin responsive($breakpoint) {
   @if $breakpoint == mobile {
-
+      @media (max-width: 600px) {
+        @content
+      };
   }
-
-  
+  @if $breakpoint == portrait {
+      @media (max-width: 900px) {
+        @content
+      };
+  }
+  @if $breakpoint == landscape {
+      @media (max-width: 1200px) {
+        @content
+      };
+  }
+  @if $breakpoint == large-screen {
+      @media (min-width: 1800px) {
+        @content
+      };
+  }
 }
