--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,9 @@
 - portrait
 - landscape
 - large-screen
+
+1em = 16px;
+
 */
 @keyframes moveInFromLeft {
   0% {
@@ -61,16 +64,16 @@ html {
   @media (max-width: 600px) {
     html {
       font-size: 50%; } }
-  @media (max-width: 600px) {
+  @media (max-width: 37.5em) {
     html {
       font-size: 50%; } }
-  @media (max-width: 900px) {
+  @media (max-width: 56.25em) {
     html {
       font-size: 60%; } }
-  @media (max-width: 1200px) {
+  @media (max-width: 75em) {
     html {
       font-size: 70%; } }
-  @media (min-width: 1800px) {
+  @media (min-width: 112.5em) {
     html {
       font-size: 80%; } }
 
